src/test/deca/syntax/valid/classes/homebrew/testInclude3.deca
#include"classWithInclude.deca"

{int i=5;
}