src/test/deca/syntax/invalid/homebrew/testIf.deca
int a=0;
int b=5;
else{
	a=b;
}